ChromeDriver: Handle key events properly on Mac

Fixes devtool's emulation of key input events to emulate
os key event for OSX.

BUG=667387

Review-Url: https://codereview.chromium.org/2656903005
Cr-Commit-Position: refs/heads/master@{#478407}

Former-commit-id: fa84ab9619de73a61d305c7459fc186e99b0d291